toggle jump definitive fix

--- a/docs/src/theme/ColorModeToggle/styles.module.css
+++ b/docs/src/theme/ColorModeToggle/styles.module.css
@@ -4,6 +4,7 @@
   cursor: pointer;
   height: 0;
   width: 0;
+  display: none;
 }
 
 .toggleSlot {
